# console-bundle

./: environment.yml  pyproject.toml
src/consolebundle/: CommandManager.py  CommandRunner.py
